--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,10 +1,41 @@
-/*
-I wanted to go with a mobile first approach, but it actually lead to more verbose CSS in this case, so I've gone web first. Can't always force things...
 
-Side note: I know that this style of nesting in SASS doesn't result in the most performance efficient CSS code... but on the OCD/organizational side, I like it. So for CodePen purposes, CSS selector performance be damned.
-*/
-/* Global settings */
-/* Global "table" column settings */
+i.fa-chevron-down {
+  margin-left: 5px;
+  font-size: 16px;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.accordion.open i.fa-chevron-down {
+  
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+/**
+ * Submenu
+ -----------------------------*/
+
+
+.submenu {
+  display: none;
+}
+
+.submenu label {
+  display: block;
+  text-decoration: none;
+  -webkit-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+
+/* sdfsdfsffffffffffffffffffffffffffffff*/
 .product-image {
   float: left;
   width: 20%;
@@ -211,15 +242,16 @@ label {
     margin-left: 20px;
   }
 
-  .product-quantity:before {
+  /* .product-quantity:before {
     content: 'x';
-  }
+  } */
 
   .product-removal {
     width: auto;
   }
 
   .product-line-price {
+    content: 'Total';
     float: right;
     width: 70px;
   }
@@ -238,7 +270,7 @@ label {
   }
 
   .product .product-line-price:before {
-    content: 'Item Total: €';
+    content: 'Total: ';
   }
 
   .totals .totals-item label {
