--- a/templates/page/carrito.html.twig
+++ b/templates/page/carrito.html.twig
@@ -4,7 +4,10 @@
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
 	<script src="https://kit.fontawesome.com/7bd9185960.js" crossorigin="anonymous"></script>
-
+				  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+				  <script src="sweetalert2.all.min.js"></script>
+<!-- Optional: include a polyfill for ES6 Promises for IE11 -->
+<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 {% endblock %}
 {% block contenido %}
 
@@ -89,7 +92,9 @@
 		 
 	  <div class="product-title">{{pedido.getIdproducto().getNombre()}}</div>
 	  <p class="product-description">{{pedido.getIdproducto().getDescripcion()}}</p>
+	  <p id="caca{{pedido.getId()}}">Stock: {{pedido.getIdproducto().getUnidadesStock()}}{% if pedido.getIdproducto().getUnidadesStock() > 1 %} Uds.{% else %}Uds.{% endif %}</p>
 	</div>
+	
 	<div class="product-price">{{pedido.getIdproducto().getprecio()}}</div>
 
 	<!-- Cambia la cantidad del producto -->
@@ -100,9 +105,21 @@
     		<input type="hidden" name="_method" value="POST">
     		<input type="hidden" name="_token" value="{{ csrf_token('modify' ~ pedido.getId()) }}">
 	 		<input type="hidden" name="idprod" value="{{pedido.getIdProducto().getId() }}">
-	  		<input type="number" name="subject{{pedido.getId()}}" value="{{pedido.getCantidad()}}" min="1">
+	  		<input type="number" name="subject{{pedido.getId()}}" onkeydown="return false" value="{{pedido.getCantidad()}}" min="1" max="{{pedido.getIdproducto().getUnidadesStock()}}">	  
 	  	</form>
+
 	</div>
+
+	<script>
+	$('#cambio{{pedido.getId()}}').on('keyup keypress', function(e) {
+  var keyCode = e.keyCode || e.which;
+  if (keyCode === 13) { 
+    e.preventDefault();
+    return false;
+  }
+});
+	</script>
+	
 	{% set XV = XV + 1 %}
 	
 	<!--  -->
@@ -126,6 +143,7 @@ function enviar_formulario(){
 document.getElementById("myFormdelete").submit();
 }
 </script> 
+
 {% endfor %}
 			{% endif %}
 			{% endif %}	
@@ -170,8 +188,50 @@ document.getElementById("myFormdelete").submit();
 	  <dd class="totals-value" id="cart-shipping">{{shipping}}</dd>
 	  <dt><a href="/promocode/add">Have a promocode?</a></dt>
 	</dl>
-	<div class="payment">
-	  <a href="payment/add">Add</a>
+
+	<div id="accordion" class="accordion">
+	<div class="payment link">Add<i class="fa fa-chevron-down"></i></div>
+	  <form class="submenu" action="/action_page.php">
+  <label for="fname">Titular:</label><br>
+  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="lname">Numero Tarjeta:</label><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
+  <label for="lname">Fecha Caducidad</label><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
+  <label for="lname">CVV</label><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
+  <input type="submit" value="Submit">
+	</form>
+
+
+<script>
+$(function () {
+  var Accordion = function (el, multiple) {
+    this.el = el || {};
+    this.multiple = multiple || false;
+
+    // Variables privadas
+    var links = this.el.find(".link");
+    // Evento
+    links.on("click", { el: this.el, multiple: this.multiple }, this.dropdown);
+  };
+
+  Accordion.prototype.dropdown = function (e) {
+    var $el = e.data.el;
+    ($this = $(this)), ($next = $this.next());
+
+    $next.slideToggle();
+    $this.parent().toggleClass("open");
+
+    if (!e.data.multiple) {
+      $el.find(".submenu").not($next).slideUp().parent().removeClass("open");
+    }
+  };
+
+  var accordion = new Accordion($("#accordion"), false);
+});
+</script>
+
 	  <h4 class="headline-primary">Payment</h3>
 	  <div class="ux-card">
 		<a href="/payment/{id}"><img src="https://img1.wsimg.com/fos/react/sprite.svg#visa" height="32" width="50" /> John Doe</a>
