--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,4 +1,134 @@
 
+.front, .back, .container1 {
+  height: 300px;
+}
+
+.front, .back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+  transition: all 0.3s linear;
+}
+
+.back {
+  transition: all 0.3s linear;
+  transform: rotateY(180deg);
+}
+
+.container1 {
+  position: relative;
+}
+
+.front2 {
+  transform: rotateY(180deg);
+}
+
+.back2 {
+  transform: rotateY(360deg);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+.form1 {
+  width: 100%;
+  max-width: 450px;
+  padding: 0 1em;
+}
+
+.form__card1 {
+  margin: 1em 0 2em 0;
+}
+
+.form__field1 {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+}
+
+.form__label1 {
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: rebeccapurple;
+}
+
+.form__input1 {
+  display: block;
+  height: 44px;
+  width: 100%;
+  margin: 1em 0 2em 0;
+  padding: 2em;
+  border: 0;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  font-size: 1.1em;
+  transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.form__input1:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.form__input1:focus {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.card1 {
+  height: 234.52px;
+  width: 100%;
+  padding: 28% 8% 12%;
+  background: #eee;
+  border-radius: 1em;
+  background-color: #acff90;
+  background-image: linear-gradient(135deg, #acff90, #9edabf);
+  color: #006437;
+}
+
+.card__name1,
+.card__number1 {
+  display: block;
+  margin-top: 0.5em;
+  font-family: Anonymous Pro, monospace;
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+.card__cvv1 {
+  display: block;
+  margin-top: 0.5em;
+  font-family: Anonymous Pro, monospace;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  margin-left: 9em;
+}
+.card__cvvNumber1 {
+  text-align: end;
+  height: 33px;
+  position: absolute;
+  width: 8em;
+  background-color: white;
+  display: block;
+  margin-top: 0.5em;
+  font-family: Anonymous Pro, monospace;
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+
+.card__cvv221 {
+  display: block;
+  margin-top: 0.5em;
+  font-family: Anonymous Pro, monospace;
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+
+/* sdfsdfsffffffffffffffffffffffffffffff*/
 i.fa-chevron-down {
   margin-left: 5px;
   font-size: 16px;
