--- a/templates/page/carrito.html.twig
+++ b/templates/page/carrito.html.twig
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
 	<script src="https://kit.fontawesome.com/7bd9185960.js" crossorigin="anonymous"></script>
+
 				  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 				  <script src="sweetalert2.all.min.js"></script>
 <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
@@ -189,22 +190,120 @@ document.getElementById("myFormdelete").submit();
 	  <dt><a href="/promocode/add">Have a promocode?</a></dt>
 	</dl>
 
+	{# Desplegable mostrar Tarjeta #}
+	{% if user %}
+	<div id="accordion1" class="accordion">
+	<div class="payment link1">Mis Tarjetas<i class="fa fa-chevron-down"></i></div>
+	<div class="container2">
+	<table id="simpletable" class="table table-striped table-bordered nowrap">
+     <thead>
+    	<tr>
+        	<th>Titular</th>
+            <th>Ultimos Nº Tarjeta</th>
+            <th>Fecha Caducidad</th>
+        </tr>
+    </thead>       
+	<tbody>
+	
+	{% for tarjetas in filtroTarjetas %}
+	<tr  id="nombre{{tarjetas.getId()}}">
+    	<td class="nombre{{tarjetas.getId()}}" id="{{tarjetas.getId()}}">{{tarjetas.getTitular()}}</td>
+    	<td class="nombre{{tarjetas.getId()}}" id="{{tarjetas.getId()}}">{{tarjetas.getUltimosDigitos()}}</td>
+    	<td class="nombre{{tarjetas.getId()}}" id="{{tarjetas.getId()}}">{{tarjetas.getFechaCaducidad()}}</td>
+  	</tr>
+	  <script>
+
+document.getElementById("nombre{{tarjetas.getId()}}").onclick = function(){
+	document.getElementsByClassName("ux-card").textContent="HOLA"
+	
+	console.log(document.getElementsByClassName(event.target.className)[0].textContent)
+	}
+</script>
+	{% endfor %}
+	</tbody>
+  </table>
+	</div>
+
+</div>
+
+
+{# Fin desplegable mostrar Tarjeta #}
+
+{# Desplegable añadir Tarjeta #}
 	<div id="accordion" class="accordion">
 	<div class="payment link">Add<i class="fa fa-chevron-down"></i></div>
-	  <form class="submenu" action="/action_page.php">
-  <label for="fname">Titular:</label><br>
-  <input type="text" id="fname" name="fname" value=""><br>
-  <label for="lname">Numero Tarjeta:</label><br>
-  <input type="text" id="lname" name="lname" value=""><br><br>
-  <label for="lname">Fecha Caducidad</label><br>
-  <input type="text" id="lname" name="lname" value=""><br><br>
-  <label for="lname">CVV</label><br>
-  <input type="text" id="lname" name="lname" value=""><br><br>
-  <input type="submit" value="Submit">
-	</form>
+
+	{{form_start(formTarjeta, {'attr':{'class':"form1 form-horizontal", 'action':'', 'autocomplete':'off', 'style':'display:none', "id":"subirForm",'onsubmit':"myFunction()"}})}}
+	<div class="container1">
+<div id="dela" class="form__card1  card1 front">
+    <span id="name" class="card__name1"  data-default="Full Name">Full Name</span>
+    <span id="number" class="card__number1" data-default="1234 5678 9012 3456">1234 5678 9012 3456</span>
+  </div>
+  
+  <div id="atr" class="form__card1  card1 back">
+	<span id="cvvLine" class="card__cvvNumber1" >xxx</span>
+    <span id="cvv" class="card__cvv1" >CVV</span>
+  </div>
+  </div>
+	  {# <form class="submenu" action="/action_page.php"> #}
+  <label for="inputName" class="form__label1">Titular:</label><br>
+  {{form_widget(formTarjeta.titular, {'attr':{ 'id':'inputName', 'class':"form__input1", 'onkeyup':"inputValue(this, '#name')","name":"titular", "type":"text", }})}}<br>
+  <label for="inputNumber"  class="form__label1">Numero Tarjeta:</label><br>
+  <input id="inputNumber" class="form__input1" onkeyup ="inputValue(this, '#number')" maxlength="16" placeholder = "XXXX  XXXX  XXXX  XXXX" name="inputNumber1" type="text"/><br>
+  <label for="inputData" class="form__label1 ">Fecha Caducidad:</label><br>
+ {{form_widget(formTarjeta.fecha_caducidad, {'attr':{ 'id':'inputData','class':"form__input1 fecha", 'maxlength':'5', "name":"fecha_caducidad", "type":"text", 'onkeyup':"fechas()"}})}}<br>
+  <label for="inputCvv" class="form__label1">CVV:</label><br>
+  <input id="inputCvv" class="form__input1" onkeyup ="inputValue(this, '#cvvLine')" maxlength="4" name="inputCvv" type="text"/><br>
+   {{form_widget(formTarjeta.send, {'label': 'Crear', 'attr':{'class':'btn bot', 'type':'submit'}})}}
+   <input id="UltDigits" type="hidden" name="UltDigits" value=""/>
+	{{form_end(formTarjeta)}}
+
+</div>
+{% endif %}
+{# Fin desplegable añadir Tarjeta #}
 
 
 <script>
+
+function fechas(){
+var fecha = document.getElementsByClassName("fecha")[0];
+console.log(fecha.value)
+if(fecha.value.length == 2){
+
+fecha.value += "/";
+}
+}
+var cv = document.getElementById('atr');
+var cv2 = document.getElementById('dela');
+var bod = document.getElementsByTagName("BODY")[0];
+var UltDigits = "";
+
+function myFunction(){
+
+	let texto = document.getElementById("number").textContent
+	UltDigits = texto.match(/.{1,4}/g);
+	document.getElementById("UltDigits").value = parseInt(UltDigits[3])
+
+}
+$('#cuentas_bank_cvv').click(function() {
+	cv.classList.add("back2");
+	cv2.classList.add("front2");
+	//alert(event.target.nodeName);
+});
+
+
+bod.onclick = function(){
+	if(event.target.id != "cuentas_bank_cvv"){
+   cv.classList.remove("back2");
+	cv2.classList.remove("front2");
+	}
+}
+
+{# function normalImg(x) {
+cv.classList.remove("back2");
+	cv2.classList.remove("front2");
+} #}
+
 $(function () {
   var Accordion = function (el, multiple) {
     this.el = el || {};
@@ -230,13 +329,61 @@ $(function () {
 
   var accordion = new Accordion($("#accordion"), false);
 });
+
+$(function () {
+  var Accordion2 = function (el, multiple) {
+    this.el = el || {};
+    this.multiple = multiple || false;
+
+    // Variables privadas
+    var links2 = this.el.find(".link1");
+    // Evento
+    links2.on("click", { el: this.el, multiple: this.multiple }, this.dropdown);
+  };
+
+  Accordion2.prototype.dropdown = function (e) {
+    var $el = e.data.el;
+    ($this = $(this)), ($next = $this.next());
+
+    $next.slideToggle();
+    $this.parent().toggleClass("open");
+
+    if (!e.data.multiple) {
+      $el.find(".submenu").not($next).slideUp().parent().removeClass("open");
+    }
+  };
+
+  var accordion2 = new Accordion2($("#accordion1"), false);
+});
+ // mirar esto //
+$(document).ready(function () {
+    $("#inputName").keyup(function () {
+                    if ($(this).val().length == 4) {
+                        $(this).val($(this).val() + "-");
+                    }
+                    else if ($(this).val().length == 9) {
+                        $(this).val($(this).val() + "-");
+                    }
+                    else if ($(this).val().length == 14) {
+                        $(this).val($(this).val() + "-");
+                    }
+                });
+});
+
+function inputValue(from, to) {
+  if(from.value != '')
+
+    document.querySelector(to).innerHTML = from.value;
+
+  else 
+    document.querySelector(to).innerHTML = document.querySelector(to).dataset.default;
+}
 </script>
 
 	  <h4 class="headline-primary">Payment</h3>
 	  <div class="ux-card">
-		<a href="/payment/{id}"><img src="https://img1.wsimg.com/fos/react/sprite.svg#visa" height="32" width="50" /> John Doe</a>
+		<a href="/payment/{id}"><img src="https://img1.wsimg.com/fos/react/sprite.svg#visa" height="32" width="50" />asda</a>
 	  </div>
-	</div>
 	<div class="terms">
 	  <h4 class="headline-primary">Terms & Conditions</h3>
 	  <p class="review">Clicking on "I Agree" means you agree to GoDaddy's <a href="terms/show">Terms & Conditions</a>.</p>
@@ -250,8 +397,9 @@ $(function () {
   </div>
   </div>
   </div>
+  </div>
+
 </section>
-		<p class="cd-go-to-cart"><a href="#0">Go to cart page</a></p>
 	</div> 
 
 	    <script src="js/pagCarritoCalc.js"></script>
