--- a/templates/adminPage/base.html.twig
+++ b/templates/adminPage/base.html.twig
@@ -27,7 +27,10 @@
 		{# <link rel="stylesheet" href="{{ asset("theme.min.css", "estilosAdmin") }}">
     <script src="{{ asset("modernizr-2.8.3.min.js", "scriptAdmin") }}"></script> #}
         <link rel="stylesheet" href="/css/css-admin/theme.min.css">
+                <link rel="stylesheet" href="/css/css-admin/theme.css">
         <script src="/js/js-admin/modernizr-2.8.3.min.js"></script>
+
+        
         		{% block head %}{% endblock %}
     </head>
 	<body>
