--- a/public/css/css-admin/theme.css
+++ b/public/css/css-admin/theme.css
@@ -2254,5 +2254,5 @@ hr { box-sizing: content-box; height: 0; margin-top: 1rem; border: 0; border-top
 
 .swal-modal { padding: 20px; }
 .swal-modal .swal-footer { text-align: center; }
-
+.col-sm-12{z-index: 1 !important;}
 /*# sourceMappingURL=theme.css.map */
