--- a/templates/page/perfil.html.twig
+++ b/templates/page/perfil.html.twig
@@ -18,7 +18,7 @@
         <script src="/js/js-admin/widget-statistic.js"></script>
 {% endblock %}
 {% block contenido %}         
-                    <div class="container-fluid">
+                    <div class="container-fluid" style="margin-top: 22px;">
 
                         <div class="row">
                             <div class="col-lg-4 col-md-5">
@@ -75,6 +75,7 @@
                                         <div class="tab-pane fade show active" id="current-month" role="tabpanel" aria-labelledby="pills-timeline-tab">
                                             <div class="card-body">
                                                 <div class="profiletimeline mt-0">
+                                                {% if comentarioUsuario %}
                                                 		{% set contador = 0 %}
                                                     {% set itemsPerpage = 4 %}
 			                                        {% set lowerLimit = (currentPage - 1) * itemsPerpage %}
@@ -143,7 +144,11 @@
 				&nbsp;&nbsp;
 				<span class="tm-btn tm-btn-default tm-right">Next</span>
 			{% endif %}
+
             </div>
+                        {% else %}
+            <p style="text-align:center;">No has hecho ningún comentario</p>
+            {% endif %}
                                                 </div>
                                             </div>
                                         </div>
@@ -154,38 +159,25 @@
                                         <div class="tab-pane fade " id="next-month" role="tabpanel" aria-labelledby="pills-products-tab">
                                             <div class="card-body">
                                                 <div class="profiletimeline mt-0">
- {{dump(filtroPedidoCompleto, "Hola")}}
+                                                {% if filtroPedidoCompleto %}
                                                 {% for pedido in filtroPedidoCompleto %}
                                                    
                                                     <div class="sl-item">
-                                                        <div class="sl-left"> <img src="../img/users/1.jpg" alt="user" class="rounded-circle" /> </div>
+
                                                         <div class="sl-right">
                                                             <div>{{pedido.getIdCliente().getNombre()}} {{pedido.getIdcliente().getApellido()}} <span class="sl-date">{{pedido.getFechaPedido()|date("d-m-Y H:i")}}</span>
-                                                                <p>Ver factura <a href="javascript:void(0)"> Design weblayout</a></p>
-                                                                <div class="row">
-                                                                     {% for producto in productos|reverse|slice(0, 8)  %}
-            {% set imagen = producto.getImagen()|split('|') %}
-	        {% set ruta = "" %}
-	            {% for rutaImg in imagen|slice(0, 1) %}
-		    {% set ruta = rutaImg %}
-	            {% endfor %}
-			<div class="col-6 col-lg-3" > 
-            {% for imagen in imagen|slice(1,1) %}
-                <img src="{{ruta}}{{imagen}}" alt="Preview image" width=257>
-			{% endfor %}
-                <div id="products"><p style="display: inline-block;margin-top: 10px;" title={{producto.getNombre()}}><a href={{ path('detalleprod', {'id': producto.getId()}) }} >{% if producto.getNombre()|length > 38 %} {{producto.getNombre()|slice(0,37)}}...  {% else %}{{producto.getNombre()}}{% endif %}</a></p>
-					<br><p>{{producto.getPrecio()}}</p></div></div>
-        {% endfor %}      
-                                                                    <div class="col-lg-3 col-md-6 mb-20"><img src="/img/conejos.jpg" class="img-fluid rounded" /></div>
-                                                         
-                                                                </div>
+                                                               <span style="margin-top:10px;margin-left: 56px;"> <a href="{{ path('detallepedidouser', {'id':pedido.getIdCliente().getId()})}}" >Ver factura</a></span>
+                                                               <span style="margin-top:10px;margin-left: 56px;"> <a href="{{ path('pdf', {'id': pedido.getId(), 'name':'iduser'}) }}">Descargar factura</a></span>
+                                                               
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <hr>
                                                     
                                                 {% endfor %}
-                                              
+                                                {% else %}
+                                                <p style="text-align:center;">No has hecho ningún pedido</p>
+                                              {% endif %}
                                                 </div>
                                             </div>
                                         </div>
@@ -266,20 +258,28 @@
                                                                             <div class="vertical bottom"></div>
                                                                         </div>
                                                                         <div class="data">
-                                                                            <div class="pan" title="4123 4567 8910 1112">XXXX XXXX XXXX {{card.getUltimosDigitos()}}</div>
+                                                                            <div class="pan" title="{{card.getUltimosDigitos()}}">XXXX XXXX XXXX {{card.getUltimosDigitos()}}</div>
                                                                             <div class="exp-date-wrapper">
                                                                                 <div class="left-label">EXPIRES END</div>
                                                                                 <div class="exp-date">
                                                                                     <div class="upper-labels">MONTH/YEAR</div>
-                                                                                    <div class="date" title="01/17">{{card.getFechaCaducidad()}}</div>
+                                                                                    <div class="date" title="{{card.getFechaCaducidad()}}">{{card.getFechaCaducidad()}}</div>
                                                                                 </div>
                                                                             </div>
-                                                                            <div class="name-on-card" title="John Doe">{{card.getTitular()}}</div>
+                                                                            <div class="name-on-card" title="{{card.getTitular()}}">{{card.getTitular()}}</div>
                                                                         </div>
                                                                         <div class="lines-down"></div>
                                                                         <div class="lines-up"></div>
+
+                                                                        <form method="post" action="" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                                            <input type="hidden" name="_method" value="DELETE">
+                                                                            <input type="hidden" name="_token" value="{{card.getId()}}">
+                                                                                                                                                                                                                            <button style="float:right;z-index:1000; position:relative;">Borrar</button>
+                                                                        </form>
+                                                                       
                                                                     </div>
                                                                     </div>
+                                                                    
                                                                     <br>
                                                             {% endfor %}
                                                            </div>
