--- a/templates/page/carrito.html.twig
+++ b/templates/page/carrito.html.twig
@@ -3,12 +3,14 @@
 		<link rel="stylesheet" href="{{ asset("carrito.css", "estilos") }}">
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
 	<link rel="stylesheet" href="https://img1.wsimg.com/ux/1.3.9-brand/css/uxcore.min.css">
+
 	<script src="https://kit.fontawesome.com/7bd9185960.js" crossorigin="anonymous"></script>
 
-				  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-				  <script src="sweetalert2.all.min.js"></script>
 <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
 <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+
+        <link rel="stylesheet" href="plugins/jquery-toast-plugin/dist/jquery.toast.min.css">
+
 {% endblock %}
 {% block contenido %}
 
@@ -198,6 +200,12 @@ document.getElementById("myFormdelete").submit();
 	<table id="simpletable" class="table table-striped table-bordered nowrap">
      <thead>
     	<tr>
+
+		<script>
+			if("{{tarjetaRepe}}"){
+window.onload = function(){showDangerToast()}
+				}
+		</script>
         	<th>Titular</th>
             <th>Ultimos Nº Tarjeta</th>
             <th>Fecha Caducidad</th>
@@ -214,9 +222,19 @@ document.getElementById("myFormdelete").submit();
 	  <script>
 
 document.getElementById("nombre{{tarjetas.getId()}}").onclick = function(){
-	document.getElementsByClassName("ux-card").textContent="HOLA"
-	
-	console.log(document.getElementsByClassName(event.target.className)[0].textContent)
+	let digitosUlt = {{tarjetas.getUltimosDigitos()}}
+	let nombreTarjeta =document.getElementsByClassName(event.target.className)[0].textContent
+	document.getElementById("tarjeta").textContent=nombreTarjeta.split(" ")[0] +" - "+ digitosUlt.toString()
+	document.getElementById("tarjeta").style.fontSize="16px"
+	document.getElementById("tarjeta").style.fontWeight="bold"
+	document.getElementById("tarjeta").style.color="green"
+	var img = document.createElement("IMG");
+	img.src="https://i.ya-webdesign.com/images/payment-logos-png-7.png"
+	img.height="32"
+	img.width="50"
+	document.getElementById("tarjeta").appendChild(img)
+
+	console.log()
 	}
 </script>
 	{% endfor %}
@@ -230,7 +248,10 @@ document.getElementById("nombre{{tarjetas.getId()}}").onclick = function(){
 {# Fin desplegable mostrar Tarjeta #}
 
 {# Desplegable añadir Tarjeta #}
-	<div id="accordion" class="accordion">
+{% if mensajeLimite %}
+		<p style="font-size:16px;color:red">No puedes agregar otra tarjeta</p>
+{% else %}
+<div id="accordion" class="accordion">
 	<div class="payment link">Add<i class="fa fa-chevron-down"></i></div>
 
 	{{form_start(formTarjeta, {'attr':{'class':"form1 form-horizontal", 'action':'', 'autocomplete':'off', 'style':'display:none', "id":"subirForm",'onsubmit':"myFunction()"}})}}
@@ -259,6 +280,8 @@ document.getElementById("nombre{{tarjetas.getId()}}").onclick = function(){
 	{{form_end(formTarjeta)}}
 
 </div>
+{% endif %}
+	
 {% endif %}
 {# Fin desplegable añadir Tarjeta #}
 
@@ -381,8 +404,8 @@ function inputValue(from, to) {
 </script>
 
 	  <h4 class="headline-primary">Payment</h3>
-	  <div class="ux-card">
-		<a href="/payment/{id}"><img src="https://img1.wsimg.com/fos/react/sprite.svg#visa" height="32" width="50" />asda</a>
+	  <div class="ux-card" id="tarjeta">
+				<span style="font-size:16px;">Seleccione una tarjeta</span>
 	  </div>
 	<div class="terms">
 	  <h4 class="headline-primary">Terms & Conditions</h3>
@@ -401,6 +424,7 @@ function inputValue(from, to) {
 
 </section>
 	</div> 
-
+	        <script src="plugins/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
 	    <script src="js/pagCarritoCalc.js"></script>
+				    <script src="{{ asset("js-admin/alerts.js", "script") }}"></script>
 {% endblock %}
