--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,7 +1,20 @@
-footer{background-color: #31353d;
+footer{
+  clear: both;
+  background-color: #31353d;
     box-shadow: -7px -1px 29px -3px rgba(0,0,0,0.75);
-    margin-top:30px !important;
+
+    padding: 5px;
+    margin-top: 181px!important;
+    width: 100%;
 }
+#div-info-content{
+
+  padding: 20px 20px 160px 20px;
+
+  overflow: hidden;
+ clear:both;
+}
+#both{clear: both;}
 #rowFooter{
     margin-top: 40px;
     display: flex;
