--- a/templates/page/layout.html.twig
+++ b/templates/page/layout.html.twig
@@ -227,6 +227,9 @@
 			<script src="{{ asset("addprod-cart.js", "script") }}" ></script>
 	            <script src="{{ asset("cart-drop.js", "script") }}"></script>
             <script src="{{ asset("newjs.js", "script") }}"></script>
+
+   <div id="both" style="clear:both;"></div>
+
 <footer>
 	<div class="container">
 		<br>
