--- a/templates/page/productos.html.twig
+++ b/templates/page/productos.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block contenido %}
 
-<section class="container">
+<section class="container" style="height: 100%;">
 
 		<h1 style="text-align: center; margin-bottom:56px;">Productos</h1>
 
