--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ html * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html, body{  height: 100%;}
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -15,7 +15,6 @@ html * {
 }
 
 body {
-  font-size: 1em !important;
   font-family: "PT Sans", sans-serif;
   color: #31353d;
   background-color: #eeeff7 !important;
