--- a/templates/page/todoProductos.html.twig
+++ b/templates/page/todoProductos.html.twig
@@ -37,7 +37,7 @@
 		<div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3" >
 	
 		    {% for imagen in imagen|slice(1,1) %}
-				 <img src="{{ ruta}}{{imagen}}" alt="Preview image" width=257>
+				 <img src="{{ ruta}}{{imagen}}" alt="Preview image" style="height: 257px !important; width:257px !important;">
     		{% endfor %}
 
 			{% set star = "star" %}
