--- a/templates/adminPage/loginAdmin.html.twig
+++ b/templates/adminPage/loginAdmin.html.twig
@@ -19,13 +19,13 @@
                             <div class="logo-centered">
                             </div>
                             <h3>Inicio sesión Admin</h3>
-                            <form action="/page/admin">
+                            <form  action="" method="POST">
                                 <div class="form-group">
-                                    <input type="text" name="user" id="user" class="form-control" placeholder="Email" required="" value="johndoe@admin.com">
+                                    <input type="text" name="user" id="user" class="form-control" placeholder="Email" required="" value="">
                                     <i class="ik ik-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" value="123456">
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" value="">
                                     <i class="ik ik-lock"></i>
                                 </div>
                                 <div class="sign-btn text-center">
