--- a/templates/page/contacto.html.twig
+++ b/templates/page/contacto.html.twig
@@ -1,7 +1,6 @@
 {% extends "page/layout.html.twig" %}
 {% block head %}
-    <script src="{{ asset("validate-jquery-form.js", "script") }}"></script>
-    <script src="{{ asset("additional-validate-form.js", "script") }}"></script>
+
             <link rel="stylesheet" href="{{ asset("formstyle.css", "estilos") }}">
         <link rel="stylesheet" href="{{ asset("socialNstyle.css", "estilos") }}">
           <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora.css">
@@ -56,7 +55,7 @@
           <label class="form-label" for="emailAddress">
             Email<abbr title="required">*</abbr>
           </label>
-          {{form_widget(form.email, {'attr':{'class':'form-element', "id":"lastName", "name":"emailAddress", "autocomplete":"emailAddress",'placeholder':'Apellidos', "tabindex":"3", 'required':'', "aria-required":"true", "autofocus":""}})}}
+          {{form_widget(form.email, {'attr':{'class':'form-element', "id":"lastName", "name":"emailAddress", "autocomplete":"emailAddress",'placeholder':'Email', "tabindex":"3", 'required':'', "aria-required":"true", "autofocus":""}})}}
           {# <input id="emailAddress" class="form-element" name="emailAddress" type="email" autocomplete="on" placeholder="yourname@gmail(probably).com" tabindex="3" required aria-required="true" /> #}
           
         </div>
@@ -197,4 +196,6 @@
   </div>
   </div>
   </section>
+      <script src="{{ asset("validate-jquery-form.js", "script") }}"></script>
+    <script src="{{ asset("additional-validate-form.js", "script") }}"></script>
 {% endblock %}
