--- a/templates/page/productos.html.twig
+++ b/templates/page/productos.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block contenido %}
 
-<section class="container" style="height: 100%;">
+<section class="container" style="height: auto;">
 
 		<h1 style="text-align: center; margin-bottom:56px;">Productos</h1>
 
@@ -46,7 +46,7 @@
 	<div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3" >
 	
 		    {% for imagen in imagen|slice(1,1) %}
-				 <img src="{{ ruta}}{{imagen}}" alt="Preview image" width=257>
+				 <img src="{{ ruta}}{{imagen}}" alt="Preview image" style="height: 257px !important; width:257px !important;">
     					{% endfor %}
 
 						{% set star = "star" %}
